2009-05-07  kitone  <kitone@gna.org>

	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
	Fix: bug #10439 : Better project file.
	Improve open/save with framerate, timing mode, edit timing mode, 
	subtitle selection, video and waveform uri...

2009-05-06  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking-preferences.glade:
	* plugins/actions/scalesubtitles/dialog-scale-subtitles.glade:
	* plugins/actions/splitdocument/dialog-split-document.glade:
	* share/glade/dialog-script-properties.glade:
	* share/glade/subtitleeditor.glade:
	Fix Gtk warning: adjustment with non-zero page size is deprecated.

2009-05-06  kitone  <kitone@gna.org>

	* plugins/actions/styleeditor/dialog-style-editor.glade:
	Fix Gtk warning: adjustment with non-zero page size is deprecated.

2009-05-05  kitone  <kitone@gna.org>

	* src/subtitles.cc:
	* src/subtitles.h:
	New function select multiple subtitles.

2009-05-04  kitone  <kitone@gna.org>

	* src/vp/gstreamerplayer.cc:
	Fix: Draw black canvas.

2009-05-02  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/dialog-move-subtitles.glade:
	* plugins/actions/movesubtitles/movesubtitles.cc:
	Improvement of "Move Subtitles" with the option "Only selected subtitles".
	Fix Gtk warning: adjustment with non-zero page size is deprecated.

2009-05-02  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/mpsub/mpsub.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Fix: Debian bug #526155: FTBFS with GCC 4.4: missing #include.

2009-04-28  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* src/vp/gstreamerplayer.cc:
	Fix: bug #7019. The black rectangle.

2009-04-26  kitone  <kitone@gna.org>

	* configure.in:
	Change dependence of libxml++ >= 2.20. 
	Fix: bug #13428.

2009-04-26  kitone  <kitone@gna.org>

	* configure.in:
	* src/isocodes.cc: